tests/lean/rawStringEOF.lean.expected.out
rawStringEOF.lean:1:7: error: unterminated raw string literal
