tests/lean/rawStringEOF.lean
#check r###"this is a raw string, unterminated"##
